--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: html_runner
-description: A powerful HTML Runner, which helps you create and group your HTML Files or Projects by importing them as .htmls and exporting them as .zips.
+description: A powerful HTML Runner, which helps you create and group your HTML Files or Projects.
 version: 1.6.7+1
 publish_to: 'none'
 
@@ -9,20 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # The missing ingredient for your Update Button:
-  url_launcher: ^6.2.5 
-  
-  # Your existing ingredients:
+  url_launcher: ^6.2.5
   webview_flutter: ^4.4.2
   shared_preferences: ^2.2.2
   google_sign_in: ^6.1.6
   path_provider: ^2.1.1
-  archive: ^3.3.7
+  archive: ^3.4.9
   permission_handler: ^11.0.1
   fluttertoast: ^8.2.4
-  file_picker: ^6.1.1
+  # UPDATED THESE TWO:
+  file_picker: ^8.0.0  
+  intl: ^0.19.0
   image_picker: ^1.0.4
-  intl: ^0.18.1
 
 flutter:
   uses-material-design: true
